# Cpp_GUI_lab

./: README.md
QT_BasicCalculator/: CMakeLists.txt  calculation_Function.cpp  calculation_Function.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_calculation_Function.cpp
QT_HelloWorld/HelloWorld/: mainwindow.ui
QT_TextFinder/: CMakeLists.txt  textfinder.ui
QT_TextFinder/TextFinder/: input.txt  textfinder.cpp  textfinder.ui
